--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       let ol = document.querySelector('#data-list')
       for (let record of handler.records) {
         let li = document.createElement('li')
-        li.appendChild(document.createTextNode(record.raw))
+        li.appendChild(document.createTextNode(record.id + ' ' + record.type + ' ' + record.raw))
         ol.appendChild(li)
       }
     })
