--- a/static/index.html
+++ b/static/index.html
@@ -12,10 +12,12 @@
       <div class="nav-wrapper">
         <a href="#!" class="brand-logo blue-text text-lighten-2">DDL Tools</a>
         <a href="#" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+
         <ul class="right hide-on-med-and-down">
           <li><a class="waves-effect waves-light btn modal-trigger blue lighten-2" href="#modal-import">Import</a></li>
           <li><a class="waves-effect waves-light btn modal-trigger blue lighten-2" href="#modal-export">Export</a></li>
         </ul>
+
       </div>
     </nav>
   </div>
@@ -57,16 +59,24 @@
 
   <div class="row">
     <div id="sidebar" class="col s2 grey darken-3">  
+      <form>
+        <div class="input-field">
+          <input id="search" type="search" required>
+          <label class="label-icon" for="search"><i class="material-icons">search</i></label>
+          <i class="material-icons">close</i>
+        </div>
+      </form>
+
       <form action="#">
         <p>
           <label>
-            <input type="checkbox" checked="checked"/>
+            <input type="checkbox"/>
             <span>Show Comments</span>
           </label>
         </p>
         <p>
           <label>
-            <input type="checkbox" checked="checked" />
+            <input type="checkbox"/>
             <span>Show Errors</span>
           </label>
         </p>
@@ -74,8 +84,13 @@
     </div>
 
     <div class="col s9">
-      <div id="file-info" class="row">
-        <p id="data"></p>
+      <div id="file-info" class="row center-align transparent">
+        <div class="col s6">
+          <h6 id="filename"></h6>
+        </div>
+        <div class="col s6">
+            <h6 id="total-records"></h6>
+        </div>
       </div>
       <div id="content" class="row">
         <div class="col s1"></div>
