--- a/static/index.html
+++ b/static/index.html
@@ -10,7 +10,7 @@
   <div class="navbar-fixed">
     <nav>
       <div class="nav-wrapper">
-        <a href="#!" class="brand-logo blue-text text-lighten-2">DDL Tools</a>
+        <a href="#!" class="brand-logo blue-text text-lighten-2">ddl-tools</a>
         <a href="#" class="sidenav-trigger"><i class="material-icons">menu</i></a>
 
         <ul class="right hide-on-med-and-down">
@@ -101,7 +101,6 @@
     </div>
   </div>
 
-  <!-- <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script> -->
   <script type="text/javascript" src="js/materialize.min.js"></script>
   <script>require('./renderer.js')</script>
 </body>
