--- a/static/index.html
+++ b/static/index.html
@@ -53,7 +53,7 @@
       </div>
     </div>
     <div class="modal-footer grey darken-4">
-      <a href="#!" class="modal-close waves-effect waves-light btn-flat blue lighten-2">Generate</a>
+      <a id="export-submit" href="#!" class="modal-close waves-effect waves-light btn-flat blue lighten-2">Generate</a>
     </div>
   </div>
 
