--- a/static/index.html
+++ b/static/index.html
@@ -49,7 +49,7 @@
     <div class="modal-content">
       <div class="input-field">
         <input id="output-file" type="text" class="validate white-text">
-        <label for="output-file">Please enter a name for your generated file</label>
+        <label for="output-file">Please enter a name for the generated file</label>
       </div>
     </div>
     <div class="modal-footer grey darken-4">
@@ -80,10 +80,13 @@
             <span>Show Errors</span>
           </label>
         </p>
-      </form>  
+      </form>
+
+      <div id="filename"></div>
+      <div id="total-records"></div>
     </div>
 
-    <div class="col s9">
+    <!-- <div class="col s9">
       <div id="file-info" class="row center-align transparent">
         <div class="col s6">
           <h6 id="filename"></h6>
@@ -91,11 +94,12 @@
         <div class="col s6">
             <h6 id="total-records"></h6>
         </div>
-      </div>
+      </div> -->
       <div id="content" class="row">
-        <div class="col s1"></div>
-        <div class="col s11">
-          <ul id="data-list" class="collapsible expandable"></ul>
+        <!-- <div class="col s1"></div> -->
+        <div>
+          <!-- <ul id="data-list" class="collapsible expandable"></ul> -->
+          <div id="data-list"></div>
         </div>
       </div>
     </div>
