--- a/static/index.html
+++ b/static/index.html
@@ -7,21 +7,43 @@
 </head>
 <body>
 
-  <div class="navbar-fixed">
-    <nav>
-      <div class="nav-wrapper">
-        <a href="#!" class="brand-logo blue-text text-lighten-2">ddl-tools</a>
-        <a href="#" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+  <nav class="navbar-fixed">
+    <div class="nav-wrapper">
 
-        <ul class="right hide-on-med-and-down">
-          <li><a class="waves-effect waves-light btn modal-trigger blue lighten-2" href="#modal-import">Import</a></li>
-          <li><a class="waves-effect waves-light btn modal-trigger blue lighten-2" href="#modal-export">Export</a></li>
-        </ul>
+      <a href="#!" class="brand-logo blue-text text-lighten-2">ddl-tools</a>
+      <a href="#" class="sidenav-trigger"><i class="material-icons">menu</i></a>
 
-      </div>
-    </nav>
-  </div>
+      <ul class="right hide-on-med-and-down">
+        <li><a class="waves-effect waves-light btn modal-trigger blue lighten-2" href="#modal-import">Import</a></li>
+        <li><a class="waves-effect waves-light btn modal-trigger blue lighten-2" href="#modal-export">Export</a></li>
+      </ul>
+
+    </div>
+  </nav>
   
+  <div class="row">
+
+    <div id="side-bar" class="col s3 flex">
+      <ul>
+        <li>
+          <h5 id="file-name"></h5>
+        </li>
+        <li>
+          <p id="total-records"></p>
+        </li>
+      </ul>
+    </div>
+
+    <div id="main-content" class="col-s9 flex">
+      <!-- <div class="row" id="content-head">
+        <h1>content head</h1>
+      </div> -->
+      <div class="row valign-wrapper" id="content-body">
+        <h4 id="landing" class="grey-text text-darken-3">Import a file by clicking the import button up top.</h4>
+      </div>
+    </div>
+  </div>
+
   <div id="modal-import" class="modal grey darken-4">
     <div class="modal-content">
       <form>
@@ -57,54 +79,8 @@
     </div>
   </div>
 
-  <div class="row">
-    <div id="sidebar" class="col s2 grey darken-3">  
-      <form>
-        <div class="input-field">
-          <input id="search" type="search" required>
-          <label class="label-icon" for="search"><i class="material-icons">search</i></label>
-          <i class="material-icons">close</i>
-        </div>
-      </form>
-
-      <form action="#">
-        <p>
-          <label>
-            <input type="checkbox"/>
-            <span>Show Comments</span>
-          </label>
-        </p>
-        <p>
-          <label>
-            <input type="checkbox"/>
-            <span>Show Errors</span>
-          </label>
-        </p>
-      </form>
-
-      <div id="filename"></div>
-      <div id="total-records"></div>
-    </div>
-
-    <!-- <div class="col s9">
-      <div id="file-info" class="row center-align transparent">
-        <div class="col s6">
-          <h6 id="filename"></h6>
-        </div>
-        <div class="col s6">
-            <h6 id="total-records"></h6>
-        </div>
-      </div> -->
-      <div id="content" class="row">
-        <!-- <div class="col s1"></div> -->
-        <div>
-          <!-- <ul id="data-list" class="collapsible expandable"></ul> -->
-          <div id="data-list"></div>
-        </div>
-      </div>
-    </div>
-  </div>
-
   <script type="text/javascript" src="js/materialize.min.js"></script>
+  <script type="text/javascript" src="js/dropzone.js"></script>
   <script>require('./renderer.js')</script>
 </body>
+
