added und import capability

--- a/static/index.html
+++ b/static/index.html
@@ -52,7 +52,7 @@
             <div class="file-field input-field">
               <div class="btn blue lighten-2">
                 <span>Select a file to import</span>
-                <input id="form-import-file" type="file" accept=".DDL"/>
+                <input id="form-import-file" type="file" accept=".DDL,.ddl,.UND,.und"/>
               </div>              
               <div class="file-path-wrapper">
                 <input class="file-path validate white-text" type="text" placeholder="Selected file" />
