--- a/static/index.html
+++ b/static/index.html
@@ -10,7 +10,7 @@
   <nav class="navbar-fixed">
     <div class="nav-wrapper">
 
-      <a href="#!" class="brand-logo blue-text text-lighten-2">ddl-tools</a>
+      <a href="#!" class="brand-logo blue-text text-lighten-2">dooDDLer</a>
       <a href="#" class="sidenav-trigger"><i class="material-icons">menu</i></a>
 
       <ul class="right hide-on-med-and-down">
