--- a/static/index.html
+++ b/static/index.html
@@ -25,11 +25,8 @@
   
   <div class="row">
 
-    <div id="side-bar" class="col s3 flex fixed">
+    <div id="side-bar" class="col s3 fixed">
       <ul>
-        <li>
-          <h1 id="landing">No File Data</h1>
-        </li>
         <li>
           <h5 id="file-name"></h5>
         </li>
@@ -39,12 +36,10 @@
       </ul>
     </div>
 
-    <div id="main-content" class="col-s9 flex">
-
-      <div class="row valign-wrapper" id="content-body">
-        <h4 class="grey-text text-darken-3">Select a file by clicking 'import' above.</h4>
+    <div id="main-content" class="col-s9 valign-wrapper">
+      <div id="data-list" class="row">
+          <h4 class="grey-text text-darken-3 landing-text">Select a file by clicking 'import' above.</h4>
       </div>
-
     </div>
 
   </div>
