--- a/static/index.html
+++ b/static/index.html
@@ -55,7 +55,7 @@
                 <input id="form-import-file" type="file" accept=".DDL,.ddl,.UND,.und"/>
               </div>              
               <div class="file-path-wrapper">
-                <input class="file-path validate white-text" type="text" placeholder="Selected file" />
+                <input class="file-path validate white-text" type="text" placeholder="no file selected" />
               </div>
             </div>
           </div>
