list collapse fixed

--- a/static/index.html
+++ b/static/index.html
@@ -38,7 +38,7 @@
 
     <div id="main-content" class="col-s9 valign-wrapper">
       <div id="data-list" class="row">
-          <h4 class="grey-text text-darken-3 landing-text">Select a file by clicking 'import' above.</h4>
+          <h4 class="grey-text text-darken-3 landing-text">select a file by clicking 'import'</h4>
       </div>
     </div>
 
