--- a/static/index.html
+++ b/static/index.html
@@ -33,6 +33,12 @@
         <li>
           <p id="total-records"></p>
         </li>
+        <li>
+          <p id="network"></p>
+        </li>
+        <li>
+          <p id="ncm"></p>
+        </li>
       </ul>
     </div>
 
