modal border color fix

--- a/static/index.html
+++ b/static/index.html
@@ -77,7 +77,7 @@
 
   <div id="modal-docs" class="modal grey darken-4">
     <div class="modal-content">
-      <h2 class="center-align">dooDDLer docs</h2>
+      <h2 class="center-align">ddl-tools documentation</h2>
       <hr>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo enim mollitia quidem dolor assumenda a esse, eveniet explicabo. Sapiente aut ab facere. Illo unde optio, odio dignissimos laborum repellendus cumque!Ipsa officia suscipit eius maxime beatae illo quia fugiat nesciunt nemo tempora dolorem mollitia neque consequuntur nam architecto totam, alias reprehenderit quos? Harum sequi eaque voluptates maxime provident vel quos?</p>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit aspernatur ut, eligendi obcaecati quae sequi asperiores autem excepturi eaque fuga ipsum perferendis sapiente, soluta, iure magnam. Beatae natus dolores magnam.
