--- a/static/index.html
+++ b/static/index.html
@@ -28,6 +28,24 @@
   <div class="row">
 
     <div id="side-bar" class="col s3 fixed">
+      <form action="#" id="form-checkbox" class="hide">
+        <ul>
+          <li>
+            <label>
+              <input id="form-show-comments" class="checkbox" type="checkbox" />
+              <span>Show Comments</span>
+            </label>
+          </li>
+          <li>
+            <label>
+              <input id="form-show-errors" class="checkbox" type="checkbox" />
+              <span>Show Errors</span>
+            </label>
+          </li>
+        </ul>
+        <hr>
+      </form>
+
       <ul>
         <li>
           <h5 id="file-name"></h5>
@@ -42,6 +60,7 @@
           <p id="ncm"></p>
         </li>
       </ul>
+        
     </div>
 
     <div id="main-content" class="col-s9 valign-wrapper">
