adding datalist module

--- a/static/index.html
+++ b/static/index.html
@@ -62,13 +62,10 @@
 
   <div id="modal-docs" class="modal grey darken-4">
     <div class="modal-content">
-      <h2 class="center-align">ddl-tools documentation</h2>
+      <h2 class="center-align">ddl-tools help</h2>
       <hr>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo enim mollitia quidem dolor assumenda a esse, eveniet explicabo. Sapiente aut ab facere. Illo unde optio, odio dignissimos laborum repellendus cumque!Ipsa officia suscipit eius maxime beatae illo quia fugiat nesciunt nemo tempora dolorem mollitia neque consequuntur nam architecto totam, alias reprehenderit quos? Harum sequi eaque voluptates maxime provident vel quos?</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit aspernatur ut, eligendi obcaecati quae sequi asperiores autem excepturi eaque fuga ipsum perferendis sapiente, soluta, iure magnam. Beatae natus dolores magnam.
-      Praesentium beatae nesciunt ab architecto optio eaque quam. Nemo sapiente quaerat repellat quam dolorem ullam itaque ab repudiandae. Ab eaque odio, laboriosam qui ut deleniti laborum quisquam labore fugit eveniet.
-      Cupiditate distinctio quae officiis minima sit aliquam in autem sunt magni suscipit et molestiae consequuntur, ullam, soluta blanditiis quos sequi natus assumenda. Fuga, reprehenderit doloribus. Odit ad nulla quos laborum.
-      Exercitationem harum voluptatem labore iusto error pariatur recusandae tempora? Magni, ullam! Iste vel illo blanditiis sapiente quod nihil fuga aliquam obcaecati accusamus a dolorem debitis voluptatibus vero, repudiandae iusto sequi.</p>
+      <p>blah</p>
+      <p>blah blah</p>
     </div>
     <div class="modal-footer grey darken-4">
       <a href="#!" class="modal-close waves-effect waves-light btn-flat blue lighten-2">Close</a>
@@ -76,7 +73,6 @@
   </div>
 
   <script type="text/javascript" src="js/materialize.min.js"></script>
-  <!-- <script type="text/javascript" src="js/dropzone.js"></script> -->
   <script>require('./renderer.js')</script>
 </body>
 
