--- a/static/index.html
+++ b/static/index.html
@@ -19,6 +19,10 @@
             <li><a class="waves-effect waves-light btn modal-trigger ddl-blue" href="#modal-docs">docs</a></li>
             <li><a class="waves-effect waves-light btn modal-trigger ddl-blue" href="#modal-import">Import</a></li>
             <li><a class="waves-effect waves-light btn ddl-blue" id="export-submit">Export</a></li>
+
+            <!-- <li><a class="waves-effect waves-light btn ddl-blue" id="reload"><i class="material-icons">reload</i></a></li>
+            <li><a class="waves-effect waves-light btn ddl-blue" id="power">Power</a></li> -->
+            
           </ul>
     
         </div>
@@ -30,8 +34,9 @@
     <div id="side-bar" class="col s3 fixed"></div>
 
     <div id="main-content" class="col-s9 valign-wrapper">
-      <div id="data-list" class="row">
-          <h4 class="grey-text text-darken-3 landing-text">select a file by clicking 'import'</h4>
+      <div class="row">
+          <h4 id="empty-list"></h4>
+          <ul id="data-list"></ul>
       </div>
     </div>
 
