--- a/static/index.html
+++ b/static/index.html
@@ -12,16 +12,15 @@
       <div class="nav-wrapper">
   
         <a href="#" class="brand-logo ddl-blue-text text-lighten-2">ddl-tools</a>
-        <!-- <a href="#" class="sidenav-trigger"><i class="material-icons">menu</i></a> -->
+        <a href="#" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         
-        <!-- <ul class="right hide-on-med-and-down"> -->
-        <ul class="right">
-          <li><a class="waves-effect waves-light btn modal-trigger ddl-blue" href="#modal-docs">help</a></li>
+        <ul class="right hide-on-med-and-down">
           <li><a class="waves-effect waves-light btn modal-trigger ddl-blue" href="#modal-import">import</a></li>
           <li><a class="waves-effect waves-light btn ddl-blue" id="export-submit">export</a></li>
 
-          <!-- <li><a class="waves-effect waves-light btn ddl-blue" id="reload"><i class="material-icons">reload</i></a></li>
-          <li><a class="waves-effect waves-light btn ddl-blue" id="power">Power</a></li> -->
+          <li><a class="waves-effect waves-light btn modal-trigger ddl-blue" href="#modal-docs"><i class="material-icons">help</i></a></li>
+          <li><a class="waves-effect waves-light btn ddl-blue" id="reload"><i class="material-icons">refresh</i></a></li>
+          <li><a class="waves-effect waves-light btn ddl-blue" id="power"><i class="material-icons">power_settings_new</i></a></li>
           
         </ul>
   
