added reference pdf and updated help contents

--- a/static/index.html
+++ b/static/index.html
@@ -68,8 +68,9 @@
     <div class="modal-content">
       <h2 class="center-align">ddl-tools help</h2>
       <hr>
-      <p>blah</p>
-      <p>blah blah</p>
+      <p>Designed and developed by Casey J. Murphy, with contributions of domain-specific knowledge and aid by Daniel J. Murphy</p>
+      <p>ddl-tools provides a way to view imported .DDL/.UND files in an organized and presentable manner.  Additionally, any imported .DDL/.UND file can be exported as a spreadsheet-import-ready .CSV file.</p>
+      <p>The <a id="pdf" href="#!">DDL Programmer's Manual</a> was used for technical references throughout development of this application.</p>
     </div>
     <div class="modal-footer grey darken-4">
       <a href="#!" class="modal-close waves-effect waves-light btn-flat blue lighten-2">Close</a>
