help icon change

--- a/static/index.html
+++ b/static/index.html
@@ -18,7 +18,7 @@
           <li><a class="waves-effect waves-light btn modal-trigger ddl-blue" href="#modal-import">import</a></li>
           <li><a class="waves-effect waves-light btn ddl-blue" id="export-submit">export</a></li>
 
-          <li><a class="waves-effect waves-light btn modal-trigger ddl-blue" href="#modal-docs"><i class="material-icons">help</i></a></li>
+          <li><a class="waves-effect waves-light btn modal-trigger ddl-blue" href="#modal-docs"><i class="material-icons">help_outline</i></a></li>
           <li><a class="waves-effect waves-light btn ddl-blue" id="reload"><i class="material-icons">refresh</i></a></li>
           <li><a class="waves-effect waves-light btn ddl-blue" id="power"><i class="material-icons">power_settings_new</i></a></li>
           
