--- a/static/index.html
+++ b/static/index.html
@@ -67,8 +67,10 @@
   <div id="modal-docs" class="modal grey darken-4">
     <div class="modal-content">
       <h2 class="center-align">ddl-tools help</h2>
+      <h6 class="center-align">beta v0.9</h6>
       <hr>
-      <p>Designed and developed by Casey J. Murphy, with contributions of domain-specific knowledge and aid by Daniel J. Murphy</p>
+      
+      <p>Designed and developed by Casey J. Murphy, with contributions of domain-specific knowledge and instruction by Daniel J. Murphy</p>
       <p>ddl-tools provides a way to view imported .DDL/.UND files in an organized and presentable manner.  Additionally, any imported .DDL/.UND file can be exported as a spreadsheet-import-ready .CSV file.</p>
       <p>The <a id="pdf" href="#!">DDL Programmer's Manual</a> was used for technical references throughout development of this application.</p>
     </div>
