--- a/static/index.html
+++ b/static/index.html
@@ -70,9 +70,9 @@
       <h6 class="center-align">beta v0.9</h6>
       <hr>
       
-      <p>Designed and developed by Casey J. Murphy, with contributions of domain-specific knowledge and instruction by Daniel J. Murphy</p>
-      <p>ddl-tools provides a way to view imported .DDL/.UND files in an organized and presentable manner.  Additionally, any imported .DDL/.UND file can be exported as a spreadsheet-import-ready .CSV file.</p>
-      <p>The <a id="pdf" href="#!">DDL Programmer's Manual</a> was used for technical references throughout development of this application.</p>
+      <p>Designed and developed by Casey J. Murphy, with contributions of domain-specific knowledge and instruction from Daniel J. Murphy</p>
+      <p><code>ddl-tools</code> provides a way to view imported .ddl/.und files in an efficiently organized manner thus expediting the troubleshooting process.  Additionally, any imported .ddl/.und file can be exported as a spreadsheet-importable .CSV file.</p>
+      <p>The <a id="pdf" href="#!">DDL Programmer's Manual</a> was used for technical references throughout the development of this application.</p>
     </div>
     <div class="modal-footer grey darken-4">
       <a href="#!" class="modal-close waves-effect waves-light btn-flat blue lighten-2">Close</a>
