--- a/static/index.html
+++ b/static/index.html
@@ -70,8 +70,8 @@
       <h6 class="center-align">beta v0.9</h6>
       <hr>
       
-      <p>Designed and developed by Casey J. Murphy, with contributions of domain-specific knowledge and instruction from Daniel J. Murphy</p>
-      <p><code>ddl-tools</code> provides a way to view imported .ddl/.und files in an efficiently organized manner thus expediting the troubleshooting process.  Additionally, any imported .ddl/.und file can be exported as a spreadsheet-importable .CSV file.</p>
+      <p>Designed and developed by Casey J. Murphy, with contributions of domain-specific expertise from Daniel J. Murphy</p>
+      <p><code>ddl-tools</code> provides a way to view imported .ddl/.und files in an efficiently organized manner thus expediting the troubleshooting process.  Additionally, any imported .ddl/.und file can be exported as an itemized set of spreadsheet-importable .CSV files.</p>
       <p>The <a id="pdf" href="#!">DDL Programmer's Manual</a> was used for technical references throughout the development of this application.</p>
     </div>
     <div class="modal-footer grey darken-4">
