mobile sidenav showing, not working

--- a/static/index.html
+++ b/static/index.html
@@ -12,7 +12,7 @@
       <div class="nav-wrapper">
   
         <a href="#" class="brand-logo ddl-blue-text text-lighten-2">ddl-tools</a>
-        <a href="#" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+        <a href="#" data-target="sm-geo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         
         <ul class="right hide-on-med-and-down">
           <li><a class="waves-effect waves-light btn modal-trigger ddl-blue" href="#modal-import">import</a></li>
@@ -21,6 +21,14 @@
           <li><a class="waves-effect waves-light btn modal-trigger ddl-blue" href="#modal-docs"><i class="material-icons">help_outline</i></a></li>
           <li><a class="waves-effect waves-light btn ddl-blue" id="reload"><i class="material-icons">refresh</i></a></li>
           <li><a class="waves-effect waves-light btn ddl-blue" id="power"><i class="material-icons">power_settings_new</i></a></li>          
+        </ul>
+
+        <ul class="sidenav" id="sm-geo">
+          <li><a href="#">import</a></li>
+          <li><a href="#">export</a></li>
+          <li><a href="#">help</a></li>
+          <li><a href="#">refresh</a></li>
+          <li><a href="#">power</a></li>
         </ul>
   
       </div>
