added repo link to help modal

--- a/static/index.html
+++ b/static/index.html
@@ -1,6 +1,6 @@
 <head>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Gruppo|Montserrat" rel="stylesheet"> 
 
   <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
   <link rel="stylesheet" href="css/main.css">
@@ -78,7 +78,7 @@
       <hr>
       
       <p>Designed and developed by Casey J. Murphy with contributions of domain-specific expertise from Daniel J. Murphy</p>
-      <p><code>ddl-tools</code> provides a way to view imported .ddl/.und files in an efficient and organized manner thus expediting the troubleshooting process.  
+      <p><a id="git-repo" href="#!"><code>ddl-tools</code></a> provides a way to view imported .ddl/.und files in an efficient and organized manner thus expediting the troubleshooting process.  
         The export functionality parses the imported file into a series of pipe-separated-value (.psv) files:</p>
 
       <ul>
@@ -87,7 +87,7 @@
         <li>one file with all keywords that had an error attached to it</li>
       </ul>
 
-      <p>The <a id="pdf" href="#!">DDL Programmer's Manual</a> was used for technical references throughout the development of this application.</p>
+      <p>The <a id="pdf" href="#!"><code>DDL Programmer's Manual</code></a> was used for technical references throughout the development of this application.</p>
     </div>
     <div class="modal-footer grey darken-4">
       <a href="#!" class="modal-close waves-effect waves-light btn-flat blue lighten-2">Close</a>
